--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".TelaCadastroUsuario"></activity>
+        <activity android:name=".TelaPainelControle"></activity>
+        <activity android:name=".TelaCadastroUsuario" />
         <activity android:name=".TelaLogin" />
         <activity android:name=".TelaCadastrarFuncionario" />
         <activity android:name=".MainActivity">
