--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".Telas.TelaPainelControle"></activity>
-        <activity android:name=".Telas.TelaCadastroUsuario" />
+        <activity android:name=".Telas.PainelControle.EditarUsuarioOutput"></activity>
+        <activity android:name=".Telas.PainelControle.DeletarUsuario" />
+        <activity android:name=".Telas.PainelControle.ListarUsuarios" />
+        <activity android:name=".Telas.PainelControle.EditarUsuarioInput" />
+        <activity android:name=".Telas.TelaPainelControle" />
+        <activity android:name=".Telas.PainelControle.TelaCadastroUsuario" />
         <activity android:name=".Telas.TelaLogin" />
         <activity android:name=".Telas.TelaCadastrarFuncionario" />
         <activity android:name=".MainActivity">
