--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".Telas.PainelControle.EditarUsuarioOutput"></activity>
-        <activity android:name=".Telas.PainelControle.DeletarUsuario" />
-        <activity android:name=".Telas.PainelControle.ListarUsuarios" />
-        <activity android:name=".Telas.PainelControle.EditarUsuarioInput" />
+        <activity android:name=".Telas.PainelControle.AgendamentoCadastrar"></activity>
+        <activity android:name=".Telas.PainelControle.painelServico.ServicoDeletar" />
+        <activity android:name=".Telas.PainelControle.painelServico.ServicoEditarOutput" />
+        <activity android:name=".Telas.PainelControle.painelServico.ServicoEditarInput" />
+        <activity android:name=".Telas.PainelControle.painelServico.ServicoListar" />
+        <activity android:name=".Telas.PainelControle.painelServico.ServicoCadastrar" />
+        <activity android:name=".Telas.PainelControle.painelUsuario.EditarUsuarioOutput" />
+        <activity android:name=".Telas.PainelControle.painelUsuario.DeletarUsuario" />
+        <activity android:name=".Telas.PainelControle.painelUsuario.ListarUsuarios" />
+        <activity android:name=".Telas.PainelControle.painelUsuario.EditarUsuarioInput" />
         <activity android:name=".Telas.TelaPainelControle" />
-        <activity android:name=".Telas.PainelControle.TelaCadastroUsuario" />
+        <activity android:name=".Telas.PainelControle.painelUsuario.CadastrarUsuario" />
         <activity android:name=".Telas.TelaLogin" />
         <activity android:name=".Telas.TelaCadastrarFuncionario" />
         <activity android:name=".MainActivity">
