--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".Telas.PainelControle.AgendamentoEditarOutput"></activity>
-        <activity android:name=".Telas.PainelControle.AgendamentoEditarInput" />
-        <activity android:name=".Telas.PainelControle.AgendamentoListar" />
-        <activity android:name=".Telas.PainelControle.AgendamentoCadastrar" />
+        <activity android:name=".Telas.PainelControle.DeletarOrdemServico"></activity>
+        <activity android:name=".Telas.PainelControle.OrdemServicoEditarOutput" />
+        <activity android:name=".Telas.PainelControle.OrdemServicoEditarInput" />
+        <activity android:name=".Telas.PainelControle.OrdemServicoListar" />
+        <activity android:name=".Telas.PainelControle.OrdemServicoCadastrar" />
+        <activity android:name=".Telas.PainelControle.painelAgendamento.AgendamentoDeletar" />
+        <activity android:name=".Telas.PainelControle.painelAgendamento.AgendamentoEditarOutput" />
+        <activity android:name=".Telas.PainelControle.painelAgendamento.AgendamentoEditarInput" />
+        <activity android:name=".Telas.PainelControle.painelAgendamento.AgendamentoListar" />
+        <activity android:name=".Telas.PainelControle.painelAgendamento.AgendamentoCadastrar" />
         <activity android:name=".Telas.PainelControle.painelServico.ServicoDeletar" />
         <activity android:name=".Telas.PainelControle.painelServico.ServicoEditarOutput" />
         <activity android:name=".Telas.PainelControle.painelServico.ServicoEditarInput" />
