--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".Telas.atv_cadastro_servico"></activity>
+        <activity android:name=".Telas.atvAgendamento"></activity>
+        <activity android:name=".Telas.atv_cadastro_agendamento" />
+        <activity android:name=".Telas.atv_cadastro_servico" />
         <activity android:name=".Telas.atvServico" />
         <activity android:name=".Telas.atv_cadastro_cliente" />
         <activity android:name=".Telas.AtvCliente" />
