--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projeto_integrador_iv">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Projeto_Integrador_IV">
-        <activity android:name=".Telas.atv_cadastro_ordem_servico"></activity>
+        android:theme="@style/Theme.Projeto_Integrador_IV"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Telas.atv_lista_funcionario"></activity>
+        <activity android:name=".Telas.atv_cadastro_ordem_servico" />
         <activity android:name=".Telas.atvOrdemServico" />
         <activity android:name=".Telas.atvAgendamento" />
         <activity android:name=".Telas.atv_cadastro_agendamento" />
